--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "type-check:affected": "nx affected --target=type-check",
     "type-check:all": "nx run-many --target=type-check --all",
     "type-check:demo": "nx run demo:type-check",
-    "type-check:shadcnui": "nx run shadcnui:type-check"
+    "type-check:shadcnui": "nx run shadcnui:type-check",
+    "setup": "node ./scripts/setup.js"
   },
   "private": true,
   "packageManager": "pnpm@8.6.3",
@@ -159,6 +160,7 @@
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "husky": "^9.1.7",
+    "inquirer": "^12.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
@@ -167,6 +169,7 @@
     "pnpm": "^9.15.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "replace-in-file": "^8.3.0",
     "storybook": "^8.4.7",
     "storybook-dark-mode": "^4.0.2",
     "tailwindcss": "3.4.3",
