--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -8,31 +8,39 @@ on:
   workflow_dispatch:  # Allow manual triggering of the workflow
 
 permissions:
-  contents: write  # Ensure we can push commits
+  contents: write  # Needed if you want to commit changes back to the repo
 
 jobs:
   lighthouse:
+    # Run only if the previous workflow succeeded or if manually triggered
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Install dependencies
+        # Switch to npm install if you prefer npm
+        run: pnpm install
+
       - name: Run Lighthouse and Generate Badges
-        uses: patrickhulce/lighthouse-badges-action@v2
-        with:
-          urls: 'https://cambridgemonorail.github.io/react-weapons-of-choice/'
-          output_path: './lighthouse-badges'
+        # Run the CLI directly with your chosen URL & output path
+        run: pnpx lighthouse-badges --url='https://cambridgemonorail.github.io/react-weapons-of-choice/' --o='./lighthouse-badges'
 
       - name: Commit & Push badges
         run: |
-          git config user.name "tim.morris+buildbot" 
+          # Configure commit author
+          git config user.name "tim.morris+buildbot"
           git config user.email "tim.morris+buildbot@users.noreply.github.com"
+
+          # Stage and commit badges
           git add lighthouse-badges
           if git diff --cached --quiet; then
             echo "No changes in badges. Skipping commit."
             exit 0
           fi
           git commit -m "chore: update Lighthouse badges"
-          # Use PAT to push directly to main (bypassing branch protection if you allow this bot user)
+
+          # Push to main using a PAT (bypassing branch protections if configured)
           git push https://x-access-token:${{ secrets.RWOC_PAT }}@github.com/CambridgeMonorail/react-weapons-of-choice.git HEAD:main
