--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prepare": "husky",
     "serve:demo": "nx serve demo",
     "serve:storybook": "cross-env STORYBOOK_DISABLE_TELEMETRY=true nx storybook storybook-host",
+    "setup": "node ./scripts/setup.js",
     "test:affected": "nx affected --target=test",
     "test:all": "nx run-many --target=test --all",
     "test:demo": "nx test demo",
@@ -47,11 +48,11 @@
     "type-check:affected": "nx affected --target=type-check",
     "type-check:all": "nx run-many --target=type-check --all",
     "type-check:demo": "nx run demo:type-check",
-    "type-check:shadcnui": "nx run shadcnui:type-check",
-    "setup": "node ./scripts/setup.js"
+    "type-check:shadcnui": "nx run shadcnui:type-check"
   },
   "private": true,
   "packageManager": "pnpm@8.6.3",
+  "type": "module",
   "dependencies": {
     "-": "^0.0.1",
     "@hookform/resolvers": "^3.9.1",
@@ -151,6 +152,7 @@
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
+    "chrome-launcher": "^1.1.2",
     "cross-env": "^7.0.3",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -164,6 +166,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
+    "lighthouse": "^12.3.0",
+    "lighthouse-badges": "^1.3.8",
     "lint-staged": "^15.2.10",
     "nx": "20.2.2",
     "pnpm": "^9.15.0",
@@ -181,7 +185,8 @@
     "vite": "^5.0.0",
     "vite-plugin-dts": "~3.8.1",
     "vite-plugin-react-markdown": "^0.2.10",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "yargs": "^17.7.2"
   },
   "engines": {
     "pnpm": ">=9.15.0"
