--- a/nx.json
+++ b/nx.json
@@ -77,7 +77,5 @@
     }
   },
   "packageManager": "pnpm",
-  "workspaceLayout": {
-    "ignoreWorkspaceRootCheck": true
-  }
+  "workspaceLayout": {}
 }
