--- a/package.json
+++ b/package.json
@@ -53,9 +53,7 @@
   "private": true,
   "packageManager": "pnpm@8.6.3",
   "dependencies": {
-    "-": "^0.0.1",
     "@hookform/resolvers": "^3.9.1",
-    "@octokit/auth-app": "^7.1.3",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -120,6 +118,7 @@
     "@nx/vite": "20.2.2",
     "@nx/web": "20.2.2",
     "@nx/workspace": "20.2.2",
+    "@octokit/auth-app": "^7.1.3",
     "@playwright/test": "^1.36.0",
     "@shadcn/ui": "^0.0.4",
     "@storybook/addon-a11y": "^8.4.7",
@@ -166,6 +165,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "~22.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lighthouse": "^12.3.0",
     "lighthouse-badges": "^1.3.8",
     "lint-staged": "^15.2.10",
