--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -26,10 +26,15 @@ jobs:
         with:
           token: ${{ steps.generate-app-token.outputs.token }}
 
-      - name: Set up Node.js and pnpm
+      - name: Set up Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: '22'
+
+      - name: Set up pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9.15.0 
 
       - name: Install dependencies
         run: pnpm install
