--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -26,6 +26,15 @@ jobs:
         with:
           token: ${{ steps.generate-app-token.outputs.token }}
 
+      - name: Check commit author
+        id: check-author
+        run: |
+          AUTHOR=$(git log -1 --pretty=format:'%an')
+          if [ "$AUTHOR" = "Monorail Updater" ]; then
+            echo "Commit made by Monorail Updater, exiting..."
+            exit 0
+          fi
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
