--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -36,6 +36,12 @@ jobs:
           fi
         continue-on-error: true
 
+      - name: Log commit author
+        if: success()
+        run: |
+          AUTHOR=$(git log -1 --pretty=format:'%an')
+          echo "Commit author: $AUTHOR"
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
