--- a/.github/workflows/lighthouse-audit.yml
+++ b/.github/workflows/lighthouse-audit.yml
@@ -43,7 +43,6 @@ jobs:
           if [ "$AUTHOR" = "Monorail Updater" ]; then
             echo "Commit made by Monorail Updater, exiting..."
             exit 0
-          fi
 
       # Set up Node.js
       - name: Set up Node.js
@@ -68,12 +67,20 @@ jobs:
           {
             "extends": "lighthouse:default",
             "settings": {
+              "maxWaitForFcp": 15000,
+              "maxWaitForLoad": 35000,
               "formFactor": "desktop",
-              "onlyCategories": [
-                "performance",
-                "accessibility",
-                "best-practices",
-                "seo"
+              "screenEmulation": {
+                "mobile": false,
+                "width": 1350,
+                "height": 940,
+                "deviceScaleFactor": 1,
+                "disabled": false
+              },
+              "emulatedUserAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/119.0.0.0 Safari/537.36",
+              "skipAudits": [
+                "uses-http2",
+                "bf-cache"
               ]
             }
           }
@@ -100,6 +107,9 @@ jobs:
           else
             git commit -m "Update Lighthouse badges"
             git push origin main
-          fi
         env:
           GITHUB_TOKEN: ${{ steps.generate-app-token.outputs.token }}
+
+      # Clean up Lighthouse configuration file
+      - name: Clean up
+        run: rm .lighthouse-config.json
