--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ permissions:
 jobs:
   validate:
     runs-on: ubuntu-latest
+    env:
+      AUTHOR_NAME: ''
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -26,31 +28,29 @@ jobs:
         id: check-author
         run: |
           AUTHOR=$(git log -1 --pretty=format:'%an')
-          echo "author=$AUTHOR" >> $GITHUB_ENV
+          echo "AUTHOR_NAME=$AUTHOR" >> $GITHUB_ENV
           if [ "$AUTHOR" = "Monorail Updater" ]; then
             echo "Commit author is Monorail Updater. Exiting..."
             exit 0
           fi
 
-      # Exit if commit author is Monorail Updater
-      - name: Exit if commit author is Monorail Updater
-        if: env.author == 'Monorail Updater'
-        run: exit 0
-
       # Set up Node.js with version 22
       - name: Setup Node.js
+        if: env.AUTHOR_NAME != 'Monorail Updater'
         uses: actions/setup-node@v4
         with:
           node-version: 22
 
       # Install pnpm
       - name: Install pnpm
+        if: env.AUTHOR_NAME != 'Monorail Updater'
         uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
 
       # Cache pnpm dependencies using actions/cache@v4
       - name: Cache pnpm store
+        if: env.AUTHOR_NAME != 'Monorail Updater'
         uses: actions/cache@v4 
         with:
           path: ~/.pnpm-store
@@ -59,10 +59,12 @@ jobs:
             ${{ runner.os }}-pnpm-
 
       - name: Prune pnpm store
+        if: env.AUTHOR_NAME != 'Monorail Updater'
         run: pnpm store prune
 
       # Install dependencies
       - name: Install Dependencies
+        if: env.AUTHOR_NAME != 'Monorail Updater'
         run: |
           retry() {
             for i in {1..3}; do
@@ -76,10 +78,12 @@ jobs:
 
       # Install Playwright Browsers
       # - name: Install Playwright Browsers
+      #   if: env.AUTHOR_NAME != 'Monorail Updater'
       #   run: pnpm exec playwright install
 
       # Run Nx Affected Tasks
       - name: Run Nx Affected Tasks
+        if: env.AUTHOR_NAME != 'Monorail Updater'
         run: |
           pnpm exec nx affected -t lint --base=origin/main --head=HEAD --exclude=storybook-host,common-tailwind
           pnpm exec nx affected -t test --base=origin/main --head=HEAD --exclude=storybook-host,common-tailwind
@@ -87,14 +91,17 @@ jobs:
 
       # Start Application
       # - name: Start Application
+      #   if: env.AUTHOR_NAME != 'Monorail Updater'
       #   run: pnpm exec nx run riffroll:preview &
       #   env:
       #      CI: true
 
       # Wait for Application to be Ready
       # - name: Wait for Application to be Ready
+      #   if: env.AUTHOR_NAME != 'Monorail Updater'
       #   run: npx wait-on http://localhost:4300
 
       # Run E2E Tests
       # - name: Run E2E Tests
+      #   if: env.AUTHOR_NAME != 'Monorail Updater'
       #   run: pnpm exec nx affected -t e2e --base=origin/main --head=HEAD
