--- a/package.json
+++ b/package.json
@@ -53,139 +53,140 @@
   "private": true,
   "packageManager": "pnpm@8.6.3",
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.2",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.5",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.5",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.1",
-    "input-otp": "^1.4.1",
-    "lucide-react": "^0.462.0",
-    "next-themes": "^0.4.3",
-    "react": "18.3.1",
-    "react-day-picker": "8.10.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.53.2",
+    "embla-carousel-react": "^8.5.2",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.474.0",
+    "next-themes": "^0.4.4",
+    "react": "19.0.0",
+    "react-day-picker": "9.5.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^7.0.1",
-    "recharts": "^2.13.3",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.5",
+    "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.0",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@eslint/js": "^9.8.0",
-    "@nx/devkit": "20.2.2",
-    "@nx/eslint": "20.2.2",
-    "@nx/eslint-plugin": "20.2.2",
-    "@nx/jest": "20.2.2",
-    "@nx/js": "20.2.2",
-    "@nx/playwright": "20.2.2",
-    "@nx/react": "20.2.2",
-    "@nx/storybook": "20.2.2",
-    "@nx/vite": "20.2.2",
-    "@nx/web": "20.2.2",
-    "@nx/workspace": "20.2.2",
-    "@octokit/auth-app": "^7.1.3",
-    "@playwright/test": "^1.36.0",
+    "@babel/core": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "@eslint/js": "^9.19.0",
+    "@nx/devkit": "20.3.3",
+    "@nx/eslint": "20.3.3",
+    "@nx/eslint-plugin": "20.3.3",
+    "@nx/jest": "20.3.3",
+    "@nx/js": "20.3.3",
+    "@nx/playwright": "20.3.3",
+    "@nx/react": "20.3.3",
+    "@nx/storybook": "20.3.3",
+    "@nx/vite": "20.3.3",
+    "@nx/web": "20.3.3",
+    "@nx/workspace": "20.3.3",
+    "@octokit/auth-app": "^7.1.4",
+    "@playwright/test": "^1.50.0",
     "@shadcn/ui": "^0.0.4",
-    "@storybook/addon-a11y": "^8.4.7",
-    "@storybook/addon-actions": "^8.4.7",
-    "@storybook/addon-backgrounds": "^8.4.7",
-    "@storybook/addon-docs": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-a11y": "^8.5.1",
+    "@storybook/addon-actions": "^8.5.1",
+    "@storybook/addon-backgrounds": "^8.5.1",
+    "@storybook/addon-docs": "^8.5.1",
+    "@storybook/addon-essentials": "^8.5.1",
+    "@storybook/addon-interactions": "^8.5.1",
+    "@storybook/addon-links": "^8.5.1",
     "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/addon-themes": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/core-server": "^8.4.7",
-    "@storybook/manager-api": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/react-vite": "^8.4.7",
-    "@storybook/theming": "^8.4.7",
-    "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.3.12",
-    "@swc/core": "~1.5.7",
+    "@storybook/addon-themes": "^8.5.1",
+    "@storybook/blocks": "^8.5.1",
+    "@storybook/core-server": "^8.5.1",
+    "@storybook/manager-api": "^8.5.1",
+    "@storybook/react": "^8.5.1",
+    "@storybook/react-vite": "^8.5.1",
+    "@storybook/theming": "^8.5.1",
+    "@swc-node/register": "~1.10.9",
+    "@swc/cli": "~0.6.0",
+    "@swc/core": "~1.10.9",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss": "^4.0.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "15.0.6",
-    "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@testing-library/react": "16.2.0",
+    "@types/node": "22.10.10",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.3.1",
-    "autoprefixer": "10.4.13",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^3.0.4",
+    "@vitest/ui": "^3.0.4",
+    "autoprefixer": "10.4.20",
     "babel-jest": "^29.7.0",
     "chrome-launcher": "^1.1.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-playwright": "^2.2.0",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.1.0",
     "husky": "^9.1.7",
-    "inquirer": "^12.3.0",
+    "inquirer": "^12.3.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "~22.1.0",
+    "jsdom": "~26.0.0",
     "jsonwebtoken": "^9.0.2",
     "lighthouse": "^12.3.0",
     "lighthouse-badges": "^1.3.8",
-    "lint-staged": "^15.2.10",
-    "nx": "20.2.2",
-    "pnpm": "^9.15.0",
-    "postcss": "8.4.38",
-    "prettier": "^2.6.2",
+    "lint-staged": "^15.4.3",
+    "nx": "20.3.3",
+    "pnpm": "^9.15.4",
+    "postcss": "8.5.1",
+    "prettier": "^3.4.2",
     "replace-in-file": "^8.3.0",
-    "storybook": "^8.4.7",
+    "storybook": "^8.5.1",
     "storybook-dark-mode": "^4.0.2",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "10.9.2",
     "tslib": "^2.3.0",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "~3.8.1",
+    "typescript": "5.7.3",
+    "typescript-eslint": "^8.21.0",
+    "vite": "^6.0.11",
+    "vite-plugin-dts": "~4.5.0",
     "vite-plugin-react-markdown": "^0.2.10",
-    "vitest": "^1.6.0",
+    "vitest": "^3.0.4",
     "yargs": "^17.7.2"
   },
   "engines": {
